--- a/Tutorial 3 - Modelos de lenguaje y Word Embedding.ipynb
+++ b/Tutorial 3 - Modelos de lenguaje y Word Embedding.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -673,31 +673,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-09-16</td>\n",
-       "      <td>Longer jail terms for serious offenders, commu...</td>\n",
+       "      <td>A Boeing 737 Max heads to a landing past groun...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-09-15</td>\n",
-       "      <td>Video report by ITV News Political Corresponde...</td>\n",
+       "      <td>2020-09-16</td>\n",
+       "      <td>A sign (left) outside a Mongolian-language sch...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-09-15</td>\n",
-       "      <td>Significant further restrictions on our freedo...</td>\n",
+       "      <td>2020-09-16</td>\n",
+       "      <td>Loading... It looks, for now, like President T...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-09-15</td>\n",
-       "      <td>Labour leader Sir Keir Starmer will not take p...</td>\n",
+       "      <td>2020-09-16</td>\n",
+       "      <td>People wait for a bus in August in East Los An...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-09-15</td>\n",
-       "      <td>A new \"rule of six\" restriction is being imple...</td>\n",
+       "      <td>2020-09-16</td>\n",
+       "      <td>Dawn Wooten (left), who filed the whistleblowe...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -706,20 +706,20 @@
       ],
       "text/plain": [
        "         date                                               text Unnamed: 2\n",
-       "0  2020-09-16  Longer jail terms for serious offenders, commu...        NaN\n",
-       "1  2020-09-15  Video report by ITV News Political Corresponde...        NaN\n",
-       "2  2020-09-15  Significant further restrictions on our freedo...        NaN\n",
-       "3  2020-09-15  Labour leader Sir Keir Starmer will not take p...        NaN\n",
-       "4  2020-09-15  A new \"rule of six\" restriction is being imple...        NaN"
+       "0  2020-09-16  A Boeing 737 Max heads to a landing past groun...        NaN\n",
+       "1  2020-09-16  A sign (left) outside a Mongolian-language sch...        NaN\n",
+       "2  2020-09-16  Loading... It looks, for now, like President T...        NaN\n",
+       "3  2020-09-16  People wait for a bus in August in East Los An...        NaN\n",
+       "4  2020-09-16  Dawn Wooten (left), who filed the whistleblowe...        NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DATASET=\"datasets/itv-reinounido.csv\" #ej: cnnchile.csv\n",
+    "DATASET=\"datasets/itv-reinounido.csv\" #ej: nprnews-eeuu.csv, radionewzealand.csv\n",
     "df = pd.read_csv(DATASET,delimiter=\"|\")\n",
     "df.head(5)"
    ]
