--- a/Tutorial4_CNN/Tutorial-4-practica.ipynb
+++ b/Tutorial4_CNN/Tutorial-4-practica.ipynb
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
        "16    apecceosummit         1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2040,7 @@
        "[16049 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3021,7 +3021,7 @@
        "[15809 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3052,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3113,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3127,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3136,7 +3136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3146,7 +3146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3163,7 +3163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3189,7 +3189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3215,116 +3215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'body': ['El',\n",
-       "  'actual',\n",
-       "  'defensor',\n",
-       "  'del',\n",
-       "  'AS',\n",
-       "  'Mónaco',\n",
-       "  ',',\n",
-       "  'Guillermo',\n",
-       "  'Maripán',\n",
-       "  ',',\n",
-       "  'utilizó',\n",
-       "  'sus',\n",
-       "  'redes',\n",
-       "  'sociales',\n",
-       "  'para',\n",
-       "  'dar',\n",
-       "  'un',\n",
-       "  'mensaje',\n",
-       "  'respecto',\n",
-       "  'a',\n",
-       "  'lo',\n",
-       "  'que',\n",
-       "  'se',\n",
-       "  'vivirá',\n",
-       "  'este',\n",
-       "  'domingo',\n",
-       "  '25',\n",
-       "  'de',\n",
-       "  'octubre',\n",
-       "  'para',\n",
-       "  'el',\n",
-       "  'Plebiscito',\n",
-       "  '.',\n",
-       "  '“',\n",
-       "  'Mas',\n",
-       "  'allá',\n",
-       "  'de',\n",
-       "  'la',\n",
-       "  'diversidad',\n",
-       "  'de',\n",
-       "  'pensamientos',\n",
-       "  'y',\n",
-       "  'colores',\n",
-       "  'políticos',\n",
-       "  ',',\n",
-       "  'como',\n",
-       "  'país',\n",
-       "  'estamos',\n",
-       "  'viviendo',\n",
-       "  'un',\n",
-       "  'momento',\n",
-       "  'histórico',\n",
-       "  'donde',\n",
-       "  'tendremos',\n",
-       "  'la',\n",
-       "  'oportunidad',\n",
-       "  'de',\n",
-       "  'mostrarle',\n",
-       "  'al',\n",
-       "  'mundo',\n",
-       "  'y',\n",
-       "  'a',\n",
-       "  'nosotros',\n",
-       "  'mismos',\n",
-       "  ',',\n",
-       "  'que',\n",
-       "  'somos',\n",
-       "  'capaces',\n",
-       "  'de',\n",
-       "  'realizar',\n",
-       "  'este',\n",
-       "  'proceso',\n",
-       "  'con',\n",
-       "  'respeto',\n",
-       "  ',',\n",
-       "  'educación',\n",
-       "  ',',\n",
-       "  'valores',\n",
-       "  'y',\n",
-       "  'sin',\n",
-       "  'violencia',\n",
-       "  '”',\n",
-       "  ',',\n",
-       "  'comenzó',\n",
-       "  'diciendo',\n",
-       "  'en',\n",
-       "  'su',\n",
-       "  'publicación',\n",
-       "  '.'],\n",
-       " 'category': 'deportes'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vars(train_data[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3362,9 +3253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/855380 [00:00<?, ?it/s]Skipping token b'855380' with 1-dimensional vector [b'300']; likely a header\n",
+      "100%|██████████| 855380/855380 [03:10<00:00, 4497.81it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "MAX_VOCAB_SIZE = 50000\n",
     "\n",
@@ -3383,7 +3283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3400,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3459,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3476,7 +3376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3485,7 +3385,7 @@
        "7"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3496,7 +3396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3516,7 +3416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3537,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3553,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3592,7 +3492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3614,7 +3514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3629,7 +3529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3667,86 +3567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inicio optimización\n",
-      "Tamaño texto de entrada:torch.Size([32, 980])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1751])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1096])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1130])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 2414])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1241])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1183])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1663])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 777])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1333])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 2608])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 765])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 986])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 892])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 826])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1225])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1430])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 648])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 819])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 2307])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 645])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1586])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 2173])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n",
-      "Tamaño texto de entrada:torch.Size([32, 1664])\n",
-      "Tamaño predecciones de salida:torch.Size([32, 7])\n",
-      "Tamaño target:torch.Size([32])\n"
+      "inicio optimización\n"
      ]
     },
     {
@@ -3756,8 +3584,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-532d846b5ecc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mtrain_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mvalid_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-53-9cc27df9eef5>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, iterator, optimizer, criterion)\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcategorical_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcategory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-37-532d846b5ecc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mtrain_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mvalid_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-33-7e3e12f879f8>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, iterator, optimizer, criterion)\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcategorical_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcategory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    196\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m         \"\"\"\n\u001b[0;32m--> 198\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     98\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     99\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
